style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.heroSection{
    background-image: url("./media/BG.png");
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 60vh;
    background-position: center;

}

.ServicesOfferedContainer{
    display: flex;
    justify-content: center;
    padding: 60px;
    gap: 32px;

}
.weOfferCard{
    border: 1px solid black;
    border-radius: 10px;
    width: 300px;
    transition: all 0.4s ease;
}
.weOfferCard:hover{
    
    transform: scale(1.05);
    cursor: pointer;
}
.weOfferContent{
    padding: 10px;
    font-size: small;
    font-weight: lighter;
}
.weOfferCard>img{
    width: 100%;
    height: 190px;
    object-fit: cover;
    object-position: center;
    border-radius: 9px  9px 0  0;
}
.navbar{
       display: flex;
       justify-content:space-between; 
       padding:15px 45px;
       gap: 8px;
}
.user_icon{
    display: none;
}


.navbar a{
    color: white;
    text-decoration: none;
    font-size: 700;
}
.navbarMenuContainer{
    display: flex;
    gap: 18px;
}

.heroSectionContainer{
    display: flex;
    flex-direction: column;
    align-items: center;
    color: white;
    gap: 32px;
}
.heroSectionLogo{
    width: 200px;
}
.heroSectionInputContainer{
    display: flex;
    justify-content:center;
    align-items: center;
    gap:10px;
    padding: 10px;
    border-radius: 10px;
    width: 50%;    
}
.inputLocationSelectContainer{
    width: 35%;
    border-right: 1px solid grey !important;
    padding: 10px;
    border-radius: 10px;
    outline: none;      
    border:none;

    background-color: white;
}
.inputRestrauntSelectContainer{
    width: 65%;
    border:none;
    padding: 10px;
    border-radius: 10px;
    background-color: white;
    
}
input{
    outline: none;  
    border: none;
}


.heroSectionTitle{
    font-weight: 400;
    font-size: x-large; 

}
.collectionsContainer{
    margin: 10px 100px 100px 200px;
}
.collectionsCardContainer{
    display: flex;
}
.card1{
    background-image: url(./media/collection1.avif);
}
.card2{
    background-image: url(./media/collection2.avif);
}
.card3{
    background-image: url(./media/collection3.avif);
}
.card4{
    background-image: url(./media/collection4.avif);
}
.subheadingContainer{
    font-size: small;
    display: flex;
    justify-content: space-between;
    padding: 0px 70px;
}
.red{
    color: red;
}


@media only screen and (max-width:600px) {
    .navbarMenuContainer .user_icon{
        display: flex; ;
    }
    .link{
        display: none;
    }
   .navbar{
        padding: 15px 15px;
    }
    .heroSectionTitle{
          text-align: center;
    }
   .heroSectionInputContainer{
        display: flex;
        flex-direction: column;
        width: 100%;
        margin: 120px 0px;
        
    }
    .heroSectionInputContainer>*{
        gap: 10px;
        width: 100%;
        padding: 20px;
        
    }
    .heroSection{
        height: 100vh;
    }
    .ServicesOfferedContainer{
        display: flex;
        flex-direction: column; 
    }
    .collectionsContainer{
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .collectionsContainer>h1{
                font-weight: 100;
    }
}

